Fix Arabic text spacing issues across all HTML files
- Removed extra spaces before Arabic text in mobile navigation links
- Fixed spacing in download section headings
- Corrected footer link spacing issues
- Updated files: index.html, about.html, contact.html, projects.html, brochures.html, factsheets.html, financing-options.html, floorplans.html, guarantees.html, cookie-policy.html, privacy-policy.html, reports.html, terms-of-service.html

--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
       </div>
       <div class="mobile-nav-content-wrapper arabic">
         <div class="mobile-menu-first-div">
-          <a data-w-id="a64f6b58-a022-2bc4-d0c6-9fbd259e743c" href="about.html" class="section-heading dark nav">عن كالـما</a>
+          <a data-w-id="a64f6b58-a022-2bc4-d0c6-9fbd259e743c" href="about.html" class="section-heading dark nav">عن كالما</a>
           <a data-w-id="a64f6b58-a022-2bc4-d0c6-9fbd259e743e" href="projects.html" class="section-heading dark nav padding">المشاريع</a>
           <a data-w-id="a64f6b58-a022-2bc4-d0c6-9fbd259e7440" href="contact.html" aria-current="page" class="section-heading dark nav w--current">تواصل معنا</a>
         </div>
@@ -112,10 +112,10 @@
               <h4 class="mobile-nav-heading arabic">ثقافة الشركة</h4>
             </a>
             <a href="guarantees.html" class="page-link w-inline-block">
-              <h4 class="mobile-nav-heading arabic"> الضمانات</h4>
+              <h4 class="mobile-nav-heading arabic">الضمانات</h4>
             </a>
             <a href="financing-options.html" class="page-link w-inline-block">
-              <h4 class="mobile-nav-heading arabic"> خيارات التمويل</h4>
+              <h4 class="mobile-nav-heading arabic">خيارات التمويل</h4>
             </a>
           </div>
         </div>
@@ -137,7 +137,7 @@
       <!-- Hero content wrapper containing contact information -->
       <div class="page-hero-content-wrapper">
         <!-- Main page heading in Arabic: "Contact Us" -->
-        <h1 class="page-hero-heading">تواصل  معنا</h1>
+        <h1 class="page-hero-heading">تواصل معنا</h1>
         <!-- Contact information in Arabic: unified number and email -->
         <div class="sub-heading white email">info@calma.sa-البريد الإلكتروني - 920006553| الرقم الموحد </div>
       </div>
@@ -194,7 +194,7 @@
       <div class="footer-up-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
         <div class="footer-left-grid arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
           <div id="w-node-_576b0759-ea02-42c4-d4d8-a56649a13191-49a1317f" class="download-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
-            <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d"> تحديثات البناء</h5>
+            <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">تحديثات البناء</h5>
             <div class="download-element-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
               <a href="#" class="page-link w-inline-block">
                 <h5 class="download-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">تحديثات المشاريع</h5>
@@ -205,7 +205,7 @@
             </div>
           </div>
           <div id="w-node-_576b0759-ea02-42c4-d4d8-a56649a13185-49a1317f" class="download-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
-            <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d"> التنزيلات</h5>
+            <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">التنزيلات</h5>
             <div class="download-element-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
               <a href="brochures.html" class="page-link w-inline-block">
                 <h5 class="download-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">كتيبات تعريفية</h5>
