--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <nav role="navigation" class="w-nav-menu">
         <a href="contact.html" class="navlink w-nav-link">تواصل معنا</a>
         <a href="projects.html" class="navlink w-nav-link">المشاريع</a>
-        <a href="about.html" class="navlink last w-nav-link">عن كالـما</a>
+        <a href="about.html" class="navlink last w-nav-link">عن كالما</a>
         <a href="en/home.html" class="navlink last w-nav-link">|EN</a>
       </nav>
       <div class="w-nav-button">
@@ -149,7 +149,7 @@
       </div>
       <div class="mobile-nav-content-wrapper arabic">
         <div class="mobile-menu-first-div">
-          <a data-w-id="a64f6b58-a022-2bc4-d0c6-9fbd259e743c" href="about.html" class="section-heading dark nav">عن كالـما</a>
+          <a data-w-id="a64f6b58-a022-2bc4-d0c6-9fbd259e743c" href="about.html" class="section-heading dark nav">عن كالما</a>
           <a data-w-id="a64f6b58-a022-2bc4-d0c6-9fbd259e743e" href="projects.html" class="section-heading dark nav padding">المشاريع</a>
           <a data-w-id="a64f6b58-a022-2bc4-d0c6-9fbd259e7440" href="contact.html" class="section-heading dark nav">تواصل معنا</a>
         </div>
@@ -251,9 +251,9 @@
                   <!-- Main heading section with company tagline -->
                   <div class="hero-heading-div">
                     <!-- First part of Arabic heading: "We create" -->
-                    <h1 class="hero-heading arabic">نصنع </h1>
+                    <h1 class="hero-heading arabic">نصنع</h1>
                     <!-- Second part with special zigzag styling: "features of tomorrow" -->
-                    <h1 class="hero-heading zigzag arabic">.ملامح الغد            </h1>
+                    <h1 class="hero-heading zigzag arabic">ملامح الغد.</h1>
                   </div>
                 </div>
               </div>
@@ -334,11 +334,11 @@
         <div id="about" class="w-layout-blockcontainer container w-container">
           <div class="section-heading-wrapper arabic">
             <div class="section-name-wrapper">
-              <h5 class="section-name dark arabic">عن كالـما</h5>
+              <h5 class="section-name dark arabic">عن كالما</h5>
             </div>
             <div class="heading-wrapper">
-              <h2 class="section-heading dark arabic">نخلق مساحات هادفة لتأخ </h2>
-              <h2 class="section-heading zigzag dark arabic">. الرؤية شكلها الحقيقي</h2>
+              <h2 class="section-heading dark arabic">نخلق مساحات هادفة لتأخذ</h2>
+              <h2 class="section-heading zigzag dark arabic">الرؤية شكلها الحقيقي.</h2>
             </div>
           </div>
           <div id="w-node-_31eeaa3b-f7cf-7ff9-354e-ab4000307f5e-84fc3f1c" class="w-layout-layout about-quickstack arabic wf-layout-layout">
@@ -364,7 +364,7 @@
               </div>
               <div class="right-align-div">
                 <div class="about-paragraph-wrapper">
-                  <p class="paragraph dark arabic">في كالما، لا نكتفي بتطوير العقارات بل نتصور أسلوب حياة عصرية جديد. نضع الاستدامة في صميم التصميم ونلتزم بابتكار مجتمعات تنبض بالحياة وذلك عن طريق مشاريعنا الواعدة قيد التنفيذ ومن خلال مشاريعنا الرائدة الأخرى. نمزج التطور بالإرث، ونبني اليوم على أُسس تليق بالغد. لنُقدم مساحات تتجاوز التوقعات وتمنح كل ساكن شعورًا بالانتماء والرؤية.</p>
+                  <p class="paragraph dark arabic">في كالما، لا نكتفي بتطوير العقارات بل نتصور أسلوب حياة عصري جديد. نضع الاستدامة في صميم التصميم ونلتزم بابتكار مجتمعات تنبض بالحياة وذلك عن طريق مشاريعنا الواعدة قيد التنفيذ ومن خلال مشاريعنا الرائدة الأخرى. نمزج التطور بالإرث، ونبني اليوم على أُسس تليق بالغد. لنُقدم مساحات تتجاوز التوقعات وتمنح كل ساكن شعورًا بالانتماء والرؤية.</p>
                 </div>
               </div>
               <div class="button-wrapper arabic">
@@ -388,17 +388,16 @@
         <div class="w-layout-blockcontainer container no-padding arabic w-container">
           <div class="section-heading-wrapper padding arabic">
             <div class="section-heading-div">
-              <h2 class="section-heading dark arabic">رافقنا أكثر من 2000 شخص في<br>. رحلتهم نحو الحلم </h2>
+              <h2 class="section-heading dark arabic">رافقنا أكثر من 2000 شخص في<br>رحلتهم نحو الحلم.</h2>
             </div>
           </div>
           <div id="w-node-_05e09dfb-0586-b400-c38e-2cc1ab36baf5-84fc3f1c" class="w-layout-layout quickstack wf-layout-layout">
             <div class="w-layout-cell">
               <div class="details-wrapper">
                 <div class="sub-heading-div arabic">
-                  <h4 class="sub-heading arabic">.هنا تزدهر الإمكانيات</h4>
+                  <h4 class="sub-heading arabic">هنا تزدهر الإمكانيات.</h4>
                   <div class="grid-para-wrapper">
-                    <p class="paragraph dark arabic"> في كالما، لا نبني مجرد مشاريع، بل نبني مجتمعات تنبض بالحياة ، وتتجاوز حدود التوقع.
- بُنيت رؤيتنا لتنسج بين تنوع الثقافات وعمق التقاليد المحلية، لنصنع بيئة يشعر فيها المواطن بالانتماء. من قلب الرياض، إلى امتداد المملكة...نُصيغ تعريف جديد للانتماء.</p>
+                    <p class="paragraph dark arabic">في كالما، لا نبني مجرد مشاريع، بل نبني مجتمعات تنبض بالحياة، وتتجاوز حدود التوقع. بُنيت رؤيتنا لتنسج بين تنوع الثقافات وعمق التقاليد المحلية، لنصنع بيئة يشعر فيها المواطن بالانتماء. من قلب الرياض، إلى امتداد المملكة... نُصيغ تعريف جديد للانتماء.</p>
                   </div>
                 </div>
                 <div class="stats-div">
@@ -407,7 +406,7 @@
                       <h5 class="status-heading">تم التسليم بنجاح</h5>
                     </div>
                     <div class="stats-heading-div">
-                      <h3 class="stats-heading arabic">28 مشروعاً في الرياض وجدة</h3>
+                      <h3 class="stats-heading arabic">28 مشروعًا في الرياض وجدة</h3>
                     </div>
                   </div>
                   <div data-w-id="73cdf5fe-b819-5e94-b93c-0ce4abcf0555" style="width:0%" class="line"></div>
@@ -416,7 +415,7 @@
                       <h5 class="status-heading">إجمالي مساحة الأرض</h5>
                     </div>
                     <div class="stats-heading-div">
-                      <h3 class="stats-heading sqm arabic"> متر مربع +77,097</h3>
+                      <h3 class="stats-heading sqm arabic">+77,097 متر مربع</h3>
                     </div>
                   </div>
                   <div data-w-id="28ca611f-ca81-2509-ba8a-4aa300fd8c47" style="width:0%" class="line"></div>
@@ -425,7 +424,7 @@
                       <h5 class="status-heading">مساحة بناء</h5>
                     </div>
                     <div class="stats-heading-div">
-                      <h3 class="stats-heading sqm arabic">متر مربع +130,000</h3>
+                      <h3 class="stats-heading sqm arabic">+130,000 متر مربع</h3>
                     </div>
                   </div>
                   <div data-w-id="c6043e73-2a0f-4eb5-49ea-05478df494db" style="width:0%" class="line"></div>
@@ -449,7 +448,7 @@
             <div class="center-elements-wrapper">
               <div class="center-logo-wrapper"><img src="images/logo.png" loading="lazy" alt="" class="image"></div>
               <div class="center-para-wrapper">
-                <p class="paragraph dark center">نهجنا يتجاوز البناء التقليدي. نحن نصمم مستقبل الحياة الحضرية من خلال دمج ممارسات الاستدامة المتقدمة التي تتماشى مع أهداف رؤية السعودية 2030 البيئية. من الرياض إلى مختلف أنحاء المملكة العربية السعودية، نبني مساحات يشعر فيها المواطنون العالميون بأنهم في وطنهم، ونُنشئ بيئات شاملة تزدهر فيها العائلات وتنجح فيها الأعمال</p>
+                <p class="paragraph dark center">نهجنا يتجاوز البناء التقليدي. نحن نصمم مستقبل الحياة الحضرية من خلال دمج ممارسات الاستدامة المتقدمة التي تتماشى مع أهداف رؤية السعودية 2030 البيئية. من الرياض إلى مختلف أنحاء المملكة العربية السعودية، نبني مساحات يشعر فيها المواطنون العالميون بأنهم في وطنهم، ونُنشئ بيئات شاملة تزدهر فيها العائلات وتنجح فيها الأعمال.</p>
               </div>
               <div class="center-logo-calma"><img src="images/FULL-LOCKUP-07.png" loading="lazy" sizes="100vw" srcset="images/FULL-LOCKUP-07-p-500.png 500w, images/FULL-LOCKUP-07-p-800.png 800w, images/FULL-LOCKUP-07-p-1080.png 1080w, images/FULL-LOCKUP-07-p-1600.png 1600w, images/FULL-LOCKUP-07-p-2000.png 2000w, images/FULL-LOCKUP-07-p-2600.png 2600w, images/FULL-LOCKUP-07-p-3200.png 3200w, images/FULL-LOCKUP-07.png 4953w" alt="" class="image"></div>
               <div class="center-button-wrapper">
@@ -466,10 +465,10 @@
               <h5 class="section-name dark arabic">المشاريع الجارية</h5>
             </div>
             <div class="center-heading-wrapper">
-              <h2 class="section-heading dark center">. مُصمم بإتقان بطابع فريد مثلك</h2>
+              <h2 class="section-heading dark center">مُصمم بإتقان بطابع فريد مثلك.</h2>
             </div>
             <div class="center-para-wrapper wide">
-              <p class="paragraph dark center">تمثل كالما ذروة التميز في قطاع التطوير العقاري، حيث تلتقي الرؤية الطموحة بأعلى معايير الجودة. لا تكتفي مشاريعنا بتغيير المشهد  بل ترتقي بأسلوب الحياة، وتمنح كل تفصيلة بُعدًا يعكس فخامة من نوع جديد. ومع توسع حضورنا في مختلف أنحاء المملكة، نواصل ترسيخ معايير جديدة في عالم التطوير ونشيد معالم ملهمة تجسد معنى الاستدامة والتميز</p>
+              <p class="paragraph dark center">تمثل كالما ذروة التميز في قطاع التطوير العقاري، حيث تلتقي الرؤية الطموحة بأعلى معايير الجودة. لا تكتفي مشاريعنا بتغيير المشهد بل ترتقي بأسلوب الحياة، وتمنح كل تفصيلة بُعدًا يعكس فخامة من نوع جديد. ومع توسع حضورنا في مختلف أنحاء المملكة، نواصل ترسيخ معايير جديدة في عالم التطوير ونشيد معالم ملهمة تجسد معنى الاستدامة والتميز.</p>
             </div>
           </div>
         </div>
@@ -515,7 +514,7 @@
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
-                        <h5 class="speaker-name"> أدوار سكنية</h5>
+                        <h5 class="speaker-name">أدوار سكنية</h5>
                         <h3 class="speaker-name project">YS200</h3>
                         <h4 class="speaker-name area">حي الياسمين</h4>
                       </div>
@@ -530,7 +529,7 @@
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
-                        <h5 class="speaker-name">أدوار  سكنية</h5>
+                        <h5 class="speaker-name">أدوار سكنية</h5>
                         <h3 class="speaker-name project">YS170</h3>
                         <h4 class="speaker-name area">حي الياسمين</h4>
                       </div>
@@ -557,7 +556,7 @@
                 <h5 class="section-name dark arabic">ثقافة الشركة</h5>
               </div>
               <div class="heading-wrapper box">
-                <h2 class="section-heading dark arabic">. نبني مجتمعات الغد</h2>
+                <h2 class="section-heading dark arabic">نبني مجتمعات الغد.</h2>
               </div>
             </div>
           </div>
@@ -570,7 +569,7 @@
             </div>
             <div class="left-align-div arabic">
               <div class="corpoorate-para-wrapper">
-                <p class="paragraph dark arabic"> خلف كل مشروع من مشاريع كالما ثقافة راسخة من التفرد اللامحدود والتميز الهادف  يعمل فريقنا على بناء ما هو أكثر من مباني كل يوم عن طريق بناء مجتمعات متكاملة وتصميم مساحات بعناية تامة لتمنح قيمة دائمة عبر الزمن.</p>
+                <p class="paragraph dark arabic">خلف كل مشروع من مشاريع كالما ثقافة راسخة من التفرد اللامحدود والتميز الهادف. يعمل فريقنا على بناء ما هو أكثر من مباني كل يوم عن طريق بناء مجتمعات متكاملة وتصميم مساحات بعناية تامة لتمنح قيمة دائمة عبر الزمن.</p>
                 <a data-w-id="b7d80389-44d3-0d89-b348-c101c71dc929" href="about.html#corporate-culture" class="button dark arabic w-button">تعرف على ثقافتنا</a>
               </div>
             </div>
@@ -602,7 +601,7 @@
           <div class="footer-up-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
             <div class="footer-left-grid arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
               <div id="w-node-_576b0759-ea02-42c4-d4d8-a56649a13191-49a1317f" class="download-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
-                <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d"> تحديثات البناء</h5>
+                <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">تحديثات البناء</h5>
                 <div class="download-element-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
                   <a href="#" class="page-link w-inline-block">
                     <h5 class="download-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">تحديثات المشاريع</h5>
@@ -613,7 +612,7 @@
                 </div>
               </div>
               <div id="w-node-_576b0759-ea02-42c4-d4d8-a56649a13185-49a1317f" class="download-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
-                <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d"> التنزيلات</h5>
+                <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">التنزيلات</h5>
                 <div class="download-element-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
                   <a href="brochures.html" class="page-link w-inline-block">
                     <h5 class="download-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">كتيبات تعريفية</h5>
@@ -636,10 +635,10 @@
         <div class="line footer"></div>
         <div class="footer-middle-div w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
           <a href="financing-options.html" class="footer-text-div w-inline-block">
-            <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d financing"> خيارات التمويل</h4>
+            <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d financing">خيارات التمويل</h4>
           </a>
           <a href="guarantees.html" class="footer-text-div w-inline-block">
-            <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d"> الضمانات</h4>
+            <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">الضمانات</h4>
           </a>
           <a href="about.html#corporate-culture" class="footer-text-div w-inline-block">
             <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">ثقافة الشركة</h4>
@@ -665,7 +664,7 @@
             </div>
             <div class="terms-div w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d left">
               <a href="privacy-policy.html" class="page-link w-inline-block">
-                <h5 class="terms-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">    سياسة ملفات تعريف الارتباط (الكوكيز)</h5>
+                <h5 class="terms-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">سياسة ملفات تعريف الارتباط (الكوكيز)</h5>
               </a>
               <a href="terms-of-service.html" class="page-link w-inline-block">
                 <h5 class="terms-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">شروط الاستخدام</h5>
