--- a/projects.html
+++ b/projects.html
@@ -112,10 +112,10 @@
               <h4 class="mobile-nav-heading arabic">ثقافة الشركة</h4>
             </a>
             <a href="guarantees.html" class="page-link w-inline-block">
-              <h4 class="mobile-nav-heading arabic"> الضمانات</h4>
+              <h4 class="mobile-nav-heading arabic">الضمانات</h4>
             </a>
             <a href="financing-options.html" class="page-link w-inline-block">
-              <h4 class="mobile-nav-heading arabic"> خيارات التمويل</h4>
+              <h4 class="mobile-nav-heading arabic">خيارات التمويل</h4>
             </a>
           </div>
         </div>
@@ -155,7 +155,7 @@
             <h2 class="section-heading dark center">.تصميم مساحات جاهزة للمستقبل</h2>
           </div>
           <div class="center-para-wrapper projects">
-            <p class="paragraph dark center">بصفتها المطور العقاري الأبرز في المملكة العربية السعودية، تجسد كالما إرثًا من التفرد الذي يظهر في كل متر نطوره. من خلال  ٢٨ مشروعاً رائدًا نُعيد تعريف المشهد المدني في المملكة وقريباً في أسواق الخليج، نثبت خبرتنا الراسخة على أرض الواقع. ومع أكثر من ٢٠٠٠ عائلة تم اختيار مشاريعنا لتكون موطنهم المنشود،  في كالما لا نكتفي ببناء العقارات بل نضع معايير جديدة لتطوير العقار في المملكة والمنطقة</p>
+            <p class="paragraph dark center">بصفتها المطور العقاري الأبرز في المملكة العربية السعودية، تجسد كالما إرثًا من التفرد الذي يظهر في كل متر نطوره. من خلال ٢٨ مشروعًا رائدًا نُعيد تعريف المشهد المدني في المملكة وقريباً في أسواق الخليج، نثبت خبرتنا الراسخة على أرض الواقع. ومع أكثر من ٢٠٠٠ عائلة تم اختيار مشاريعنا لتكون موطنهم المنشود، في كالما لا نكتفي ببناء العقارات بل نضع معايير جديدة لتطوير العقار في المملكة والمنطقة</p>
           </div>
           <div class="project-logo-wrapper"><img src="images/BRANDMARK_2.png" loading="lazy" alt="" class="image"></div>
           <div class="project-stats-grid">
@@ -190,7 +190,7 @@
     <section id="residential" class="section projects">
       <div class="w-layout-blockcontainer container w-container">
         <div class="center-align-div center padding">
-          <h2 class="section-heading dark"> المشاريع السكنية</h2>
+          <h2 class="section-heading dark">المشاريع السكنية</h2>
         </div>
       </div>
       <div class="w-layout-blockcontainer container full w-container">
@@ -890,7 +890,7 @@
       <div class="footer-up-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
         <div class="footer-left-grid arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
           <div id="w-node-_576b0759-ea02-42c4-d4d8-a56649a13191-49a1317f" class="download-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
-            <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d"> تحديثات البناء</h5>
+            <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">تحديثات البناء</h5>
             <div class="download-element-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
               <a href="#" class="page-link w-inline-block">
                 <h5 class="download-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">تحديثات المشاريع</h5>
@@ -901,7 +901,7 @@
             </div>
           </div>
           <div id="w-node-_576b0759-ea02-42c4-d4d8-a56649a13185-49a1317f" class="download-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
-            <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d"> التنزيلات</h5>
+            <h5 class="download-heading w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">التنزيلات</h5>
             <div class="download-element-div arabic w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">
               <a href="brochures.html" class="page-link w-inline-block">
                 <h5 class="download-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">كتيبات تعريفية</h5>
