Update index.html styling

--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1000;
+    z-index: 101000;
     pointer-events: none;
   }
   
   /* Ensure preloader stays behind mobile menu on mobile devices */
   @media (max-width: 991px) {
     #preloader {
-      z-index: 500;
+      z-index: 10000;
     }
   }
   #preloader-logo {
@@ -337,8 +337,8 @@
               <h5 class="section-name dark arabic">عن كالما</h5>
             </div>
             <div class="heading-wrapper">
-              <h2 class="section-heading dark arabic">نخلق مساحات هادفة لتأخذ</h2>
-              <h2 class="section-heading zigzag dark arabic">الرؤية شكلها الحقيقي.</h2>
+              <h2 class="section-heading dark arabic">لتأخذ هادفة مساحات نخلق </h2>
+              <h2 class="section-heading zigzag dark arabic"> الحقيقي شكلها  الرؤية .</h2>
             </div>
           </div>
           <div id="w-node-_31eeaa3b-f7cf-7ff9-354e-ab4000307f5e-84fc3f1c" class="w-layout-layout about-quickstack arabic wf-layout-layout">
