--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -136,33 +136,70 @@
     <!-- Hero content wrapper for privacy policy page -->
     <div class="page-hero-content-wrapper">
       <!-- Main page heading -->
-      <h1 class="page-hero-heading">Privacy Policy</h1>
+      <h1 class="page-hero-heading">سياسة الخصوصية</h1>
       <!-- Last updated date information -->
-      <div class="sub-heading hero">Last updated: July 27, 2025</div>
+      <div class="sub-heading hero">آخر تحديث: 21 سبتمبر 2025</div>
     </div>
   </section>
   <div class="page-wrapper">
     <section class="section">
       <div class="w-layout-blockcontainer container w-container">
-        <div class="rich-text-block w-richtext">
-          <h3 class="section-heading dark list">Lorem ipsum dolor sit amet</h3>
-          <p class="paragraph dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <div class="rich-text-block w-richtext" style="direction: rtl; text-align: right;">
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">تسعدنا زيارتكم للموقع الإلكتروني لشركة كالما. و نفيدكم بأن كالما ملتزمة بشكل كامل بسياسة الخصوصية هذه. ويشمل ذلك، احترام خصوصية المستخدمين والتأكد من اتخاذنا جميع التدابير المتاحة لحماية معلومات وبيانات المستخدمين بما في ذلك بياناتهم الشخصية وفقًا للأنظمة المعمول بها في المملكة العربية السعودية.</p>
         </div>
-        <div class="rich-text-block w-richtext">
-          <h3 class="section-heading dark list">Lorem ipsum dolor sit amet</h3>
-          <p class="paragraph dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <div class="rich-text-block w-richtext" style="direction: rtl; text-align: right;">
+          <h3 class="section-heading dark list" style="direction: rtl; text-align: right;">كيف نجمع البيانات ونستخدمها؟</h3>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">نحن نقوم بجمع بياناتك عندما ترسل إلينا استفسارًا حول عروضنا أو عند زيارة موقعنا الإلكتروني أو حينما تبدي اهتمامك من خلال:</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">1. الموقع الإلكتروني / وسائل التواصل الاجتماعي / تطبيق المراسلة / مركز الاتصال</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">2. المشاركة في إحدى فعالياتنا أو زيارة أجنحتنا</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">3. عند زيارة أحد مكاتب مبيعاتنا أو الاتصال بمستشاري المبيعات</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">ونقوم بمعالجة البيانات أو جمعها أو استخدامها فقط حسبما تقتضيه الضرورة لضمان توفير أفضل الخدمات الممكنة للمستخدمين. على سبيل المثال، قد تتطلب بعض خدماتنا أن تقوم بالتسجيل وإنشاء حساب أو تقديم بياناتك الشخصية. وفي مثل هذه الأحوال، قد نطلب منك بعض البيانات مثل اسمك وعنوان بريدك الإلكتروني ورقم هاتفك.</p>
         </div>
-        <div class="rich-text-block w-richtext">
-          <h3 class="section-heading dark list">Lorem ipsum dolor sit amet</h3>
-          <p class="paragraph dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <div class="rich-text-block w-richtext" style="direction: rtl; text-align: right;">
+          <h3 class="section-heading dark list" style="direction: rtl; text-align: right;">ما هي المعلومات التي نقوم بجمعها؟</h3>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">تتضمن المعلومات التي قد نجمعها (والتي قد يتم جمعها تلقائيًا في بعض الأحوال) ما يلي:</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">الاسم وتفاصيل الهوية/الإقامة وتاريخ الميلاد وعنوان البريد الإلكتروني ورقم الهاتف والجنسية والنوع وتفاصيل الدخل والموقع الجغرافي والعمر وبيانات المهنة وتفاصيل التمويل وتفاصيل الاستفادة من وزارة الشؤون البلدية والقروية والإسكان وسجل الدعم الحكومي وعنوان بروتوكول الإنترنت (IP) ومعلومات الجهاز ونوع المتصفح ولغته وتاريخ ووقت طلبك ورابط الإحالة (URL) وملفات تعريف الارتباط التي قد تحدد على نحو دقيق المتصفح الذي تستخدمه أو أيًا من حساباتك على منصاتنا وتفاصيل استفسارك، وذلك وفقًا لما تقتضيه مصالحنا التجارية المشروعة.</p>
         </div>
-        <div class="rich-text-block w-richtext">
-          <h3 class="section-heading dark list">Lorem ipsum dolor sit amet</h3>
-          <p class="paragraph dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <div class="rich-text-block w-richtext" style="direction: rtl; text-align: right;">
+          <h3 class="section-heading dark list" style="direction: rtl; text-align: right;">لماذا نجمع معلوماتك؟</h3>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">نقوم بمعالجة البيانات وجمعها واستخدامها فقط حسبما تقتضيه الضرورة وبصورة معقولة لضمان توفير أفضل الخدمات لمستخدمي موقعنا. وتشمل الأغراض التي نجمع البيانات من أجلها، على سبيل المثال لا الحصر، ما يلي:</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">1. الرد على أي استفسارات أو إبداء اهتمام من قبلكم</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">2. طلب ملاحظاتك والرد على الشكاوى</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">3. توقيع أو إبرام أي نوع من العقود والاتفاقيات</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">4. تزويدك بمعلومات مخصصة لاحتياجاتك حول الخدمات وأحدث العروض التي نقدمها</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">5. تحسين خدمة الإعلانات</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">6. تلبية أي طلبات لخدمات مابعد البيع</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">7. الوفاء بالتزاماتنا بموجب الأنظمة واللوائح السعودية ('النظام المعمول بها')</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">8. إبلاغك بالتغييرات التي تطرأ على أحد أنظمتنا الأساسية أو جميعها</p>
         </div>
-        <div class="rich-text-block w-richtext">
-          <h3 class="section-heading dark list">Lorem ipsum dolor sit amet</h3>
-          <p class="paragraph dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <div class="rich-text-block w-richtext" style="direction: rtl; text-align: right;">
+          <h3 class="section-heading dark list" style="direction: rtl; text-align: right;">لمن يجوز لنا الكشف عن معلوماتك الشخصية؟</h3>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">قد نكشف عن بياناتك وفق ما يقتضية النظام المعمول به للهيئات الحكومية وجهات تطبيق النظام الجهات الأخرى التي تملك صلاحية طلب مثل تلك المعلومات. يجوز لنا أيضًا الكشف عن بياناتك لأي طرف إلى الحد المسموح به بموجب النظام المعمول به. هذا و يمكنك اختيار عدم تقديم بعض المعلومات الشخصية التي نطلبها، ولن يؤثر هذا بشكل عام على قدرتك على الوصول إلى منصاتنا والاستفادة منها. ومع ذلك، قد لا تتمكن من الوصول إلى بعض وظائف منصاتنا أو بعض الخدمات التي نقدمها.</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">وعلاوة على ذلك ، قد نعقد شراكات مع أطراف أخرى من أجل: مساعدتنا في عرض الإعلانات ذات الصلة وإدارتها عبر قنوات متعددة، بما في ذلك منصات وسائل التواصل الاجتماعي وإجراء أنشطة التدقيق والمراجعة وقياس جودة البيانات وضمان رضا العملاء وتحسين تجربتهم ومشاركتها مع مركز الاتصال بشكل يومي. وبالمثل، قد نشارك معلوماتك مع جهات التمويل من أجل تمويل العملاء عند الطلب. كما قد يستخدم شركاؤنا الخارجيون ملفات تعريف الارتباط والتقنيات غير القائمة على ملفات تعريف الارتباط لمساعدتنا في عرض إعلاناتنا لك بناءً على أنشطة التصفح التي تقوم بها واهتماماتك بشكل يومي. كذلك، قد نشارك بياناتك مع جهات حكومية أخرى وفقًا لما يقتضيه النظام.</p>
+        </div>
+        <div class="rich-text-block w-richtext" style="direction: rtl; text-align: right;">
+          <h3 class="section-heading dark list" style="direction: rtl; text-align: right;">إلى متى نحتفظ بمعلوماتك؟</h3>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">سوف نحتفظ فقط بمعلوماتك الشخصية طالما كان ذلك ضروريًا على نحو معقول أو مسموحًا به نظامًا أو مطلوبًا بموجب النظام المعمول به.</p>
+        </div>
+        <div class="rich-text-block w-richtext" style="direction: rtl; text-align: right;">
+          <h3 class="section-heading dark list" style="direction: rtl; text-align: right;">ملفات تعريف الارتباط وتقنيات التتبع</h3>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">في بعض الحالات ، قد نجمع أيضًا بياناتك من خلال استخدام ملفات تعريف الارتباط. ويشير مصطلح 'ملف تعريف الارتباط' إلى نص قصير يتم تحميله و تخزينه على القرص الصلب للمستخدم والمصمم بشكل أساسي لتحسين الخدمات التي نقدمها. لن يتم تخزين ملفات تعريف الارتباط على المتصفح الذي تستخدمه دون إذنك، كما أن ملفات تعريف الارتباط لا تشغل سوى مساحة ضئيلة من القرص الصلب.</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">قد نرسل ملف تعريف ارتباط إلى جهازك عندما تحاول الدخول إلى منصاتنا. وهناك أشكال أخرى من تقنيات التتبع قد نستخدمها بالإضافة إلى ملفات تعريف الارتباط، مثل علامات البكسل. وتتيح لنا ملفات تعريف الارتباط وغيرها من تقنيات التتبع، التعرف على جهازك وتخصيص تجربة التصفح على الإنترنت. كما تساعدنا على تعقب الخدمات التي تطلع عليها حتى نتمكن من إرسال الأخبار حول هذه الخدمات إليك.</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">كذلك، فإننا نستخدم ملفات تعريف الارتباط لقياس أنماط المرور بالموقع وتحديد الأقسام التي قمت بزيارتها في موقعنا، وقياس أنماط المعاملات في نماذج مجمعة. إننا نستخدم هذه القياسات للبحث والتعرف على عادات المستخدمين عن قرب بحيث نتمكن من تحسين الخدمات التي نقدمها مع ضمان حماية بيانات المستخدمين على النحو الأفضل. إذا كنت لا ترغب في تلقي ملفات تعريف الارتباط، يمكنك ضبط المتصفح الذي تستخدمه بحيث لا يقبلها جهازك.</p>
+        </div>
+        <div class="rich-text-block w-richtext" style="direction: rtl; text-align: right;">
+          <h3 class="section-heading dark list" style="direction: rtl; text-align: right;">الموافقة</h3>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">باستخدام منصاتنا، فإنك توافق على الالتزام ببنود سياسة الخصوصية هذه واستخدامنا لبياناتك بالطريقة الموضحة في هذه السياسة.</p>
+        </div>
+        <div class="rich-text-block w-richtext" style="direction: rtl; text-align: right;">
+          <h3 class="section-heading dark list" style="direction: rtl; text-align: right;">كيف تتواصل معنا؟</h3>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">في حالة وجود أي استفسارات متعلقة بهذه السياسة، يمكنك التواصل معنا من خلال إحدى الطرق التالية:</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">البريد الإلكتروني: info@calma.sa</p>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">رقم خدمة العملاء: 920006553</p>
+        </div>
+        <div class="rich-text-block w-richtext" style="direction: rtl; text-align: right;">
+          <h3 class="section-heading dark list" style="direction: rtl; text-align: right;">إخلاء المسئولية</h3>
+          <p class="paragraph dark" style="direction: rtl; text-align: right;">تخلي شركة كالما مسؤوليتها في حال كانت المعلومات المتاحة على منصاتنا غير دقيقة أو كاملة أو حديثة. فقد تم توفير المعلومات لأغراض المعرفة العامة فقط. وأي اعتماد من جانبك على تلك المعلومات يقع على مسؤوليتك الخاصة. كما انك توافق على تحمل المسئولية عن متابعة التغييرات على منصاتنا.</p>
         </div>
       </div>
     </section>
