Translate Arabic privacy policy to English - Complete translation with updated date to September 21, 2025

--- a/en/privacy-policy.html
+++ b/en/privacy-policy.html
@@ -138,31 +138,68 @@
       <!-- Main page heading -->
       <h1 class="page-hero-heading">Privacy Policy</h1>
       <!-- Last updated date information -->
-      <div class="sub-heading hero">Last updated: July 27, 2025</div>
+      <div class="sub-heading hero">Last updated: September 21, 2025</div>
     </div>
   </section>
   <div class="page-wrapper">
     <section class="section">
       <div class="w-layout-blockcontainer container w-container">
         <div class="rich-text-block w-richtext">
-          <h3 class="section-heading dark list">Lorem ipsum dolor sit amet</h3>
-          <p class="paragraph dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <p class="paragraph dark">We are pleased to welcome you to the Calma website. We inform you that Calma is fully committed to this privacy policy. This includes respecting user privacy and ensuring that we take all available measures to protect user information and data, including their personal data, in accordance with the applicable regulations in the Kingdom of Saudi Arabia.</p>
         </div>
         <div class="rich-text-block w-richtext">
-          <h3 class="section-heading dark list">Lorem ipsum dolor sit amet</h3>
-          <p class="paragraph dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <h3 class="section-heading dark list">How do we collect and use data?</h3>
+          <p class="paragraph dark">We collect your data when you send us an inquiry about our offers or when you visit our website or when you express interest through:</p>
+          <p class="paragraph dark">1. Website / Social Media / Messaging App / Call Center</p>
+          <p class="paragraph dark">2. Participating in one of our events or visiting our pavilions</p>
+          <p class="paragraph dark">3. When visiting one of our sales offices or contacting sales consultants</p>
+          <p class="paragraph dark">We process, collect or use data only as necessary to ensure the provision of the best possible services to users. For example, some of our services may require you to register and create an account or provide your personal data. In such cases, we may ask you for some data such as your name, email address and phone number.</p>
         </div>
         <div class="rich-text-block w-richtext">
-          <h3 class="section-heading dark list">Lorem ipsum dolor sit amet</h3>
-          <p class="paragraph dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <h3 class="section-heading dark list">What information do we collect?</h3>
+          <p class="paragraph dark">The information we may collect (which may be collected automatically in some cases) includes the following:</p>
+          <p class="paragraph dark">Name and identity/residence details, date of birth, email address, phone number, nationality, gender, income details, geographical location, age, profession data, financing details, details of benefiting from the Ministry of Municipal and Rural Affairs and Housing, government support record, Internet Protocol (IP) address, device information, browser type and language, date and time of your request, referral link (URL), and cookies that may accurately identify the browser you use or any of your accounts on our platforms and details of your inquiry, in accordance with what our legitimate business interests require.</p>
         </div>
         <div class="rich-text-block w-richtext">
-          <h3 class="section-heading dark list">Lorem ipsum dolor sit amet</h3>
-          <p class="paragraph dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <h3 class="section-heading dark list">Why do we collect your information?</h3>
+          <p class="paragraph dark">We process, collect and use data only as necessary and reasonably to ensure the provision of the best services to our website users. The purposes for which we collect data include, but are not limited to, the following:</p>
+          <p class="paragraph dark">1. Responding to any inquiries or expressions of interest from you</p>
+          <p class="paragraph dark">2. Requesting your feedback and responding to complaints</p>
+          <p class="paragraph dark">3. Signing or concluding any type of contracts and agreements</p>
+          <p class="paragraph dark">4. Providing you with information customized to your needs about the services and latest offers we provide</p>
+          <p class="paragraph dark">5. Improving advertising service</p>
+          <p class="paragraph dark">6. Meeting any requests for after-sales services</p>
+          <p class="paragraph dark">7. Fulfilling our obligations under Saudi regulations and laws ('Applicable Law')</p>
+          <p class="paragraph dark">8. Notifying you of changes to one or all of our core systems</p>
         </div>
         <div class="rich-text-block w-richtext">
-          <h3 class="section-heading dark list">Lorem ipsum dolor sit amet</h3>
-          <p class="paragraph dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <h3 class="section-heading dark list">To whom may we disclose your personal information?</h3>
+          <p class="paragraph dark">We may disclose your data as required by applicable law to government agencies, law enforcement agencies and other entities that have the authority to request such information. We may also disclose your data to any party to the extent permitted under applicable law. You can choose not to provide some of the personal information we request, and this will generally not affect your ability to access and benefit from our platforms. However, you may not be able to access some functions of our platforms or some of the services we provide.</p>
+          <p class="paragraph dark">Furthermore, we may enter into partnerships with other parties to: help us display and manage relevant advertisements across multiple channels, including social media platforms, conduct auditing and review activities, measure data quality and ensure customer satisfaction and improve their experience and share it with the call center on a daily basis. Similarly, we may share your information with financing entities for customer financing upon request. Our external partners may also use cookies and non-cookie technologies to help us display our advertisements to you based on your browsing activities and interests on a daily basis. We may also share your data with other government entities as required by law.</p>
+        </div>
+        <div class="rich-text-block w-richtext">
+          <h3 class="section-heading dark list">How long do we keep your information?</h3>
+          <p class="paragraph dark">We will only retain your personal information for as long as reasonably necessary or permitted by law or required under applicable law.</p>
+        </div>
+        <div class="rich-text-block w-richtext">
+          <h3 class="section-heading dark list">Cookies and tracking technologies</h3>
+          <p class="paragraph dark">In some cases, we may also collect your data through the use of cookies. The term 'cookie' refers to a short text that is downloaded and stored on the user's hard disk and is primarily designed to improve the services we provide. Cookies will not be stored on the browser you use without your permission, and cookies only occupy a small amount of hard disk space.</p>
+          <p class="paragraph dark">We may send a cookie to your device when you try to access our platforms. There are other forms of tracking technologies we may use in addition to cookies, such as pixel tags. Cookies and other tracking technologies allow us to recognize your device and customize your online browsing experience. They also help us track the services you view so we can send you news about these services.</p>
+          <p class="paragraph dark">We also use cookies to measure website traffic patterns and determine which sections you have visited on our site, and measure transaction patterns in aggregate forms. We use these measurements for research and to closely understand user habits so that we can improve the services we provide while ensuring the best protection of user data. If you do not want to receive cookies, you can set your browser so that your device does not accept them.</p>
+        </div>
+        <div class="rich-text-block w-richtext">
+          <h3 class="section-heading dark list">Consent</h3>
+          <p class="paragraph dark">By using our platforms, you agree to comply with the terms of this privacy policy and our use of your data in the manner described in this policy.</p>
+        </div>
+        <div class="rich-text-block w-richtext">
+          <h3 class="section-heading dark list">How to contact us?</h3>
+          <p class="paragraph dark">If you have any inquiries related to this policy, you can contact us through one of the following means:</p>
+          <p class="paragraph dark">Email: info@calma.sa</p>
+          <p class="paragraph dark">Phone: 920006553</p>
+        </div>
+        <div class="rich-text-block w-richtext">
+          <h3 class="section-heading dark list">Disclaimer</h3>
+          <p class="paragraph dark">This privacy policy may be updated from time to time. We recommend that you review this policy periodically to stay informed of any changes. Your continued use of our platforms after any changes to this policy constitutes your acceptance of such changes.</p>
         </div>
       </div>
     </section>
