Fix touch functionality in ongoing Projects slider - Enable swipe navigation on mobile devices

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         </div>
         <div class="w-layout-blockcontainer container carousel w-container">
           <div class="speaker-slider-wrapper">
-            <div data-delay="1" data-animation="slide" class="speaker-slider w-slider" data-autoplay="true" data-easing="ease-out-quad" data-hide-arrows="false" data-disable-swipe="true" data-autoplay-limit="1" data-nav-spacing="3" data-duration="900" data-infinite="true">
+            <div data-delay="1" data-animation="slide" class="speaker-slider w-slider" data-autoplay="true" data-easing="ease-out-quad" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="1" data-nav-spacing="3" data-duration="900" data-infinite="true">
               <div class="speaker-slide-mask w-slider-mask">
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
