--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
   </script>
   <script defer src="/_vercel/insights/script.js"></script>
+      <script defer src="https://cdn.vercel-insights.com/v1/speed-insights/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.26/bundled/lenis.min.js"></script>
   <script>
   // Initialize Lenis on the #scroll-container div
