--- a/floorplans.html
+++ b/floorplans.html
@@ -17,8 +17,8 @@
     import { inject } from '@vercel/analytics';
     inject();
   </script>
-  <script defer src="/_vercel/insights/script.js"></script>
-      <script defer src="https://cdn.vercel-insights.com/v1/speed-insights/script.js"></script>
+  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
+  <script defer src="https://cdn.vercel-insights.com/v1/speed-insights/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.26/bundled/lenis.min.js"></script>
   <script>
   // Initialize Lenis on the #scroll-container div
