--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
+<!--
+Purpose: Enable Vercel Web Analytics and Speed Insights in production.
+Inputs: None; loads scripts from `/_vercel/...` relative paths on Vercel.
+Outputs: Analytics and performance metrics sent to Vercel dashboards.
+Assumptions: Deployed on Vercel; no local verification needed.
+Tests (command): `git push` triggers Vercel; verify index analytics on dashboard.
+Complexity: Low.
+Security: No secrets; scripts loaded from Vercel-controlled paths.
+Author: @Goodnbad.exe
+-->
 <html data-wf-page="687744ac7f4aefd284fc3f1c" data-wf-site="687744ac7f4aefd284fc3f12">
 <head>
   <meta charset="utf-8">
@@ -13,12 +23,10 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
-  <script type="module">
-    import { inject } from '@vercel/analytics';
-    inject();
-  </script>
-  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
-  <script defer src="https://cdn.vercel-insights.com/v1/speed-insights/script.js"></script>
+  <!-- Vercel Web Analytics: production script -->
+  <script defer src="/_vercel/insights/script.js"></script>
+  <!-- Vercel Speed Insights: production script -->
+  <script defer src="/_vercel/speed-insights/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.26/bundled/lenis.min.js"></script>
   <script>
   // Initialize Lenis on the #scroll-container div
