--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Author: @Goodnbad.exe
 <html data-wf-page="687744ac7f4aefd284fc3f1c" data-wf-site="687744ac7f4aefd284fc3f12">
 <head>
   <meta charset="utf-8">
-  <title>الرئيسية</title>
+  <title>كالما - Calma</title>
   <meta content="https://cdn.prod.website-files.com/687744ac7f4aefd284fc3f12/68a6f4b3b7b128d571ca4934_Abou-1.JPG" property="og:image">
   <meta content="https://cdn.prod.website-files.com/687744ac7f4aefd284fc3f12/68a6f4b3b7b128d571ca4934_Abou-1.JPG" property="twitter:image">
   <meta content="width=device-width, initial-scale=1" name="viewport">
