--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="687b968e22f3e5bc200c0440" data-wf-site="687744ac7f4aefd284fc3f12" lang="ar" dir="rtl">
+<html dir="rtl" lang="ar" data-wf-page="687b968e22f3e5bc200c0440" data-wf-site="687744ac7f4aefd284fc3f12" lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8">
   <title>تواصل معنا</title>
