--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Complexity: Low.
 Security: No secrets; scripts loaded from Vercel-controlled paths.
 Author: @Goodnbad.exe
 -->
-<html data-wf-page="687744ac7f4aefd284fc3f1c" data-wf-site="687744ac7f4aefd284fc3f12">
+<html dir="rtl" lang="ar" data-wf-page="687744ac7f4aefd284fc3f1c" data-wf-site="687744ac7f4aefd284fc3f12">
 <head>
   <meta charset="utf-8">
   <title>كالما - Calma</title>
