--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="6878c504fc2c9922d5928016" data-wf-site="687744ac7f4aefd284fc3f12">
+<html dir="rtl" lang="ar" data-wf-page="6878c504fc2c9922d5928016" data-wf-site="687744ac7f4aefd284fc3f12">
 <head>
   <meta charset="utf-8">
   <title>عن كالما</title>
